refactored api routes
